Added tab title.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="styles/projectStyle.css">
     <link rel="stylesheet" href="styles/decoStyle.css">
     <link rel="stylesheet" href="styles\pageTransitionStyle.css">
+
+    <title>Jeffery Ma</title>
 </head>
 
 <body onload="onload()">
