Updated email target.

--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
     <div id="navMenu">
         <button id="navMenu__home" class="navMenuButton">JM</button>
         <div id="navMenu__innerWrapper">
-            <button id="navMenu__gmail" class="navMenuButton"><a href="mailto:jefferygma@gmail.com">email</a></button>
+            <button id="navMenu__gmail" class="navMenuButton"><a href="mailto:jefferygma@gmail.com"
+                    target="_blank">email</a></button>
             <button id="navMenu__linkedin" class="navMenuButton"><a href="https://www.linkedin.com/in/jefferyjma/"
                     target="_blank">linkedin</a></button>
             <button id="navMenu__github" class="navMenuButton"><a href="https://github.com/FourWheelDrive/"
