Title tag fixed.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <title>Portfolio Homepage — Jeffery Ma</title>
 
     <script type="text/javascript" src="main.js"></script>
     <link rel="stylesheet" href="styles/style.css">
@@ -13,8 +14,6 @@
     <link rel="stylesheet" href="styles/projectStyle.css">
     <link rel="stylesheet" href="styles/decoStyle.css">
     <link rel="stylesheet" href="styles\pageTransitionStyle.css">
-
-    <title>Jeffery Ma</title>
 </head>
 
 <body onload="onload()">
