--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
                     <p class="projectDate">Nov 2023</p>
                 </div>
                 <div class="projectContentWrapper">
-                    <p class="projectDescription">Developed with a team of four students for HackTheChange 2023, implemented
-                        with Express.js, Google Cloud Vision API, and OpenAI GPT API. <br>
+                    <p class="projectDescription">An AI-powered, web-based waste disposal software.<br>
+                        Developed with a team of four students for HackTheChange 2023, implemented
+                        with Express.js, Google Cloud Vision API, and OpenAI GPT API.<br>
                         <a class="projectLink" href="https://devpost.com/software/waste-eye" target="_blank">Check out our project page!</a>
                     </p>
                 </div>
