New window size test.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Portfolio Homepage — Jeffery Ma</title>
+    <title>Document</title>
 
     <script type="text/javascript" src="main.js"></script>
     <link rel="stylesheet" href="styles/style.css">
@@ -43,7 +42,7 @@
                     I'm always looking to learn more about engineering and improve my skills.
                     <br>
                     <br>
-                    <a href="https://drive.google.com/file/d/1e-wGQbdE1xHs5nivRwZ6Ed43qSi0X1Nh/view?usp=sharing" target="_blank">View my resume here!</a>
+                    <a href="https://drive.google.com/file/d/1eYGSDznK_5fZtDGqcp9n0HzTMvONmQbW/view?usp=sharing" target="_blank">View my resume here!</a>
                 </p>
             </div>
 
@@ -91,9 +90,8 @@
                     <p class="projectDate">Nov 2023</p>
                 </div>
                 <div class="projectContentWrapper">
-                    <p class="projectDescription">An AI-powered, web-based waste disposal software.<br>
-                        Developed with a team of four students for HackTheChange 2023, implemented
-                        with Express.js, Google Cloud Vision API, and OpenAI GPT API.<br>
+                    <p class="projectDescription">Developed with a team of four students for HackTheChange 2023, implemented
+                        with Express.js, Google Cloud Vision API, and OpenAI GPT API. <br>
                         <a class="projectLink" href="https://devpost.com/software/waste-eye" target="_blank">Check out our project page!</a>
                     </p>
                 </div>
@@ -123,8 +121,21 @@
                     </p>
                 </div>
             </div>
+            <!---->
+            <div id="pageBody__projects__5" class="projectPage">
+                <div class="projectTitleWrapper">
+                    <h2 class="projectTitle">Window Size Test</h2>
+                    <p class="projectDate">Dec 2023</p>
+                </div>
+                <div class="projectContentWrapper">
+                    <p class="projectDescription">Try changing your window size! Testing to help me better accomodate different screen sizes.</p>
+                    <p class="projectDescription" id="windowSize">--</p>
+                </div>
+            </div>
         </div>
     </div>
+
+    <!--Just a div for the transition between tabs.-->
     <div id="transitionBox"></div>
 
     <!--small navigation for projects-->
@@ -136,13 +147,14 @@
         <button id="pageBody__projectBar__2" class="project-menu-button">Waste Eye</button>
         <button id="pageBody__projectBar__3" class="project-menu-button">Dreamweaver</button>
         <button id="pageBody__projectBar__4" class="project-menu-button">1283 Inspector</button>
+        <!--Test project for window size.-->
+        <button id="pageBody__projectBar__5" class="project-menu-button">Window Size</button>
     </div>
 
     <div id="navMenu">
         <button id="navMenu__home" class="navMenuButton">JM</button>
         <div id="navMenu__innerWrapper">
-            <button id="navMenu__gmail" class="navMenuButton"><a href="mailto:jefferygma@gmail.com"
-                    target="_blank">email</a></button>
+            <button id="navMenu__gmail" class="navMenuButton"><a href="mailto:jefferygma@gmail.com">email</a></button>
             <button id="navMenu__linkedin" class="navMenuButton"><a href="https://www.linkedin.com/in/jefferyjma/"
                     target="_blank">linkedin</a></button>
             <button id="navMenu__github" class="navMenuButton"><a href="https://github.com/FourWheelDrive/"
@@ -151,7 +163,7 @@
     </div>
 
     <div id="copyright">
-        <p class="copyrightText">Designed and created by Jeffery Ma — <a class="projectLink copyrightText" href="https://github.com/FourWheelDrive/fourwheeldrive.github.io" target="_blank">GitHub</a></p>
+        <p class="copyrightText">Designed and Created by Jeffery Ma — <a class="projectLink copyrightText" href="https://github.com/FourWheelDrive/Project-Sirius" target="_blank">GitHub</a></p>
     </div>
 </body>
 
