First iteration of mobile orientation!
Split formatting at aspect ratio 3/4

--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
                 <div class="projectContentWrapper">
                     <p class="projectDescription">Try changing your window size! Testing to help me better accomodate different screen sizes.</p>
                     <p class="projectDescription" id="windowSize">--</p>
+                    <p class="projectDescription" id="aspectRatio">--</p>
+                    <p class="projectDescription" id="remSize">--</p>
                 </div>
             </div>
         </div>
@@ -142,13 +144,15 @@
     <!--on click, sends to some project page. **Needs a home button?-->
     <div id="pageBody__projectBar">
         <h2 id="pageBody__projectBar__header">Projects</h2>
-        <button id="pageBody__projectBar__0" class="project-menu-button">P. Altair</button>
-        <button id="pageBody__projectBar__1" class="project-menu-button">P. Sirius</button>
-        <button id="pageBody__projectBar__2" class="project-menu-button">Waste Eye</button>
-        <button id="pageBody__projectBar__3" class="project-menu-button">Dreamweaver</button>
-        <button id="pageBody__projectBar__4" class="project-menu-button">1283 Inspector</button>
-        <!--Test project for window size.-->
-        <button id="pageBody__projectBar__5" class="project-menu-button">Window Size</button>
+        <div id="pageBody__projectBar__wrapper">
+            <button id="pageBody__projectBar__0" class="project-menu-button">P. Altair</button>
+            <button id="pageBody__projectBar__1" class="project-menu-button">P. Sirius</button>
+            <button id="pageBody__projectBar__2" class="project-menu-button">Waste Eye</button>
+            <button id="pageBody__projectBar__3" class="project-menu-button">Dreamweaver</button>
+            <button id="pageBody__projectBar__4" class="project-menu-button">1283 Inspector</button>
+            <!--Test project for window size.-->
+            <button id="pageBody__projectBar__5" class="project-menu-button">Window Size</button>
+        </div>
     </div>
 
     <div id="navMenu">
