Updated an old URL.

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </div>
 
     <div id="copyright">
-        <p class="copyrightText">Designed and Created by Jeffery Ma — <a class="projectLink copyrightText" href="https://github.com/FourWheelDrive/Project-Sirius" target="_blank">GitHub</a></p>
+        <p class="copyrightText">Designed and Created by Jeffery Ma — <a class="projectLink copyrightText" href="https://github.com/FourWheelDrive/fourwheeldrive.github.io" target="_blank">GitHub</a></p>
     </div>
 </body>
 
