--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homepage — Jeffery</title>
 
     <script type="text/javascript" src="main.js"></script>
     <link rel="stylesheet" href="styles/style.css">
@@ -167,7 +167,7 @@
     </div>
 
     <div id="copyright">
-        <p class="copyrightText">Designed and Created by Jeffery Ma — <a class="projectLink copyrightText" href="https://github.com/FourWheelDrive/Project-Sirius" target="_blank">GitHub</a></p>
+        <p class="copyrightText">Designed and Created by Jeffery Ma — <a class="projectLink copyrightText" href="https://github.com/FourWheelDrive/fourwheeldrive.github.io" target="_blank">GitHub</a></p>
     </div>
 </body>
 
