Additional mobile style fixes

--- a/index.html
+++ b/index.html
@@ -71,15 +71,17 @@
             <!---->
             <div id="pageBody__projects__1" class="projectPage">
                 <div class="projectTitleWrapper">
-                    <h2 class="projectTitle">P. Sirius</h2>
+                    <h2 class="projectTitle">fourwheeldrive.github.io</h2>
                     <p class="projectDate">Sep — Dec 2023</p>
                 </div>
                 <div class="projectContentWrapper">
                     <p class="projectDescription">The portfolio website you are currently viewing! An exercise in front-end CSS 
                         transitions and web typography. <br>
-                        Although it is reasonably responsive on most desktop resolutions and screen sizes, I am planning on 
-                        revisiting this project to better support different screen types (mobile screens in particular).
+                        I am working on responsive web design! Try changing your window size!
                     </p>
+                    <p class="projectDescription" id="windowSize">--</p>
+                    <p class="projectDescription" id="aspectRatio">--</p>
+                    <p class="projectDescription" id="remSize">--</p>
                 </div>
             </div>
             <!---->
@@ -120,19 +122,6 @@
                     </p>
                 </div>
             </div>
-            <!---->
-            <div id="pageBody__projects__5" class="projectPage">
-                <div class="projectTitleWrapper">
-                    <h2 class="projectTitle">Window Size Test</h2>
-                    <p class="projectDate">Dec 2023</p>
-                </div>
-                <div class="projectContentWrapper">
-                    <p class="projectDescription">Try changing your window size! Testing to help me better accomodate different screen sizes.</p>
-                    <p class="projectDescription" id="windowSize">--</p>
-                    <p class="projectDescription" id="aspectRatio">--</p>
-                    <p class="projectDescription" id="remSize">--</p>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -145,12 +134,10 @@
         <h2 id="pageBody__projectBar__header">Projects</h2>
         <div id="pageBody__projectBar__wrapper">
             <button id="pageBody__projectBar__0" class="project-menu-button">P. Altair</button>
-            <button id="pageBody__projectBar__1" class="project-menu-button">P. Sirius</button>
+            <button id="pageBody__projectBar__1" class="project-menu-button">fourwheeldrive.github.io</button>
             <button id="pageBody__projectBar__2" class="project-menu-button">Waste Eye</button>
             <button id="pageBody__projectBar__3" class="project-menu-button">Dreamweaver</button>
             <button id="pageBody__projectBar__4" class="project-menu-button">1283 Inspector</button>
-            <!--Test project for window size.-->
-            <button id="pageBody__projectBar__5" class="project-menu-button">Window Size</button>
         </div>
     </div>
 
