--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
             -->
 
-            <div id="pageBody__projects__0" class="projectPage">
+            <div id="pageBody__projects__4" class="projectPage">
                 <div class="projectTitleWrapper">
                     <h2 class="projectTitle">P. Altair</h2>
                     <p class="projectDate">Aug 2023 — PRESENT</p>
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <!---->
-            <div id="pageBody__projects__1" class="projectPage">
+            <div id="pageBody__projects__3" class="projectPage">
                 <div class="projectTitleWrapper">
                     <h2 class="projectTitle">fourwheeldrive.github.io</h2>
                     <p class="projectDate">Sep — Dec 2023</p>
@@ -79,9 +79,7 @@
                         transitions and web typography. <br>
                         I am working on responsive web design! Try changing your window size!
                     </p>
-                    <p class="projectDescription" id="windowSize">--</p>
-                    <p class="projectDescription" id="aspectRatio">--</p>
-                    <p class="projectDescription" id="remSize">--</p>
+                    <p class="projectDescription" id="windowStats">--</p>
                 </div>
             </div>
             <!---->
@@ -98,7 +96,7 @@
                 </div>
             </div>
             <!---->
-            <div id="pageBody__projects__3" class="projectPage">
+            <div id="pageBody__projects__1" class="projectPage">
                 <div class="projectTitleWrapper">
                     <h2 class="projectTitle">Dreamweaver</h2>
                     <p class="projectDate">Jun 2022 — PRESENT</p>
@@ -111,7 +109,7 @@
                 </div>
             </div>
             <!---->
-            <div id="pageBody__projects__4" class="projectPage">
+            <div id="pageBody__projects__0" class="projectPage">
                 <div class="projectTitleWrapper">
                     <h2 class="projectTitle">1283 Inspector</h2>
                     <p class="projectDate">Oct 2020 — May 2022</p>
@@ -120,6 +118,8 @@
                     <p class="projectDescription">Developed for the Entropy of Elsett using the Discord Client API and Google Sheets API as a Discord bot.
                         Provided administrative support and kept track of writing projects to help direct feedback.
                     </p>
+                    <img src="res\inspector-profile.png" alt="I'd put the bot profile here, but I can't find it.">
+                    <img src="res\inspector-spreadsheet.png" alt="Where'd my spreadsheet go?">
                 </div>
             </div>
         </div>
@@ -133,11 +133,11 @@
     <div id="pageBody__projectBar">
         <h2 id="pageBody__projectBar__header">Projects</h2>
         <div id="pageBody__projectBar__wrapper">
-            <button id="pageBody__projectBar__0" class="project-menu-button">P. Altair</button>
-            <button id="pageBody__projectBar__1" class="project-menu-button">fourwheeldrive.github.io</button>
+            <button id="pageBody__projectBar__4" class="project-menu-button">P. Altair</button>
+            <button id="pageBody__projectBar__3" class="project-menu-button">fourwheeldrive.github.io</button>
             <button id="pageBody__projectBar__2" class="project-menu-button">Waste Eye</button>
-            <button id="pageBody__projectBar__3" class="project-menu-button">Dreamweaver</button>
-            <button id="pageBody__projectBar__4" class="project-menu-button">1283 Inspector</button>
+            <button id="pageBody__projectBar__1" class="project-menu-button">Dreamweaver</button>
+            <button id="pageBody__projectBar__0" class="project-menu-button">1283 Inspector</button>
         </div>
     </div>
 
