More robust mobile project page.

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                     <p class="projectDescription">Developed for the Entropy of Elsett using the Discord Client API and Google Sheets API as a Discord bot.
                         Provided administrative support and kept track of writing projects to help direct feedback.
                     </p>
-                    <img src="res\inspector-profile.png" alt="I'd put the bot profile here, but I can't find it.">
-                    <img src="res\inspector-spreadsheet.png" alt="Where'd my spreadsheet go?">
+                    <img class="projectImage" src="res\inspector-profile.png" alt="I'd put the bot profile here, but I can't find it.">
+                    <img class="projectImage" src="res\inspector-spreadsheet.png" alt="Where'd my spreadsheet go?">
                 </div>
             </div>
         </div>
