--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
                     <h2 id="pageBody__about__title2">Jeffery Ma.</h2>
                 </div>
                 <p>I'm a second year BSc. Electrical Engineering Co-Op student at the University of Alberta.
-                    I love system interactions, whether they're in aircraft or video games! <br>
-                    I'm always looking to learn more about engineering and improve my skills.
+                    I love learning about system interactions, whether they're in aircraft or video games! <br>
+                    <br>
+                    I'm always looking for a challenge and the opportunity to improve my skills.
                     <br>
                     <br>
                     <a href="https://drive.google.com/file/d/1AB7BmzkOrL-Jsw9RGWubsJ3Jwf87freS/view?usp=sharing" target="_blank">View my resume here!</a>
@@ -90,7 +91,11 @@
                 </div>
                 <div class="projectContentWrapper">
                     <p class="projectDescription">Developed with a team of four students for HackTheChange 2023, implemented
-                        with Express.js, Google Cloud Vision API, and OpenAI GPT API. <br>
+                        with Express.js, Google Cloud Vision API, and OpenAI GPT API. <br> <br>
+
+                        I worked on fetching data from APIs by way of Node.js and returning the request to the DOM to be displayed. <br>
+                        I also did a lot of research regarding how to apply the Cloud Vision and GPT APIs. <br>
+
                         <a class="projectLink" href="https://devpost.com/software/waste-eye" target="_blank">Check out our project page!</a>
                     </p>
                 </div>
@@ -104,6 +109,10 @@
                 <div class="projectContentWrapper">
                     <p class="projectDescription">A game built in vanilla JavaScript and my first experience with HTML5, CSS3, and JavaScript.
                         It is functional but not complete, and I will revisit it soon. <br>
+
+                        Enemies and maps are procedurally generated, although a bit rudimentary. <br>
+                        My first foray into HTML drag-and-drop API! <br>
+
                         <a class="projectLink" href="https://fourwheeldrive.github.io/dreamweaver/" target="_blank">Play Dreamweaver here!</a>
                     </p>
                 </div>
