small content update

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="projectContentWrapper">
                     <p class="projectDescription">The portfolio website you are currently viewing! An exercise in front-end CSS 
                         transitions and web typography. <br>
-                        I am working on responsive web design! Try changing your window size!
+                        I am working on responsive web design! Try changing your window size, and visiting this site on mobile or desktop!
                     </p>
                     <p class="projectDescription" id="windowStats">--</p>
                 </div>
@@ -162,7 +162,7 @@
     </div>
 
     <div id="copyright">
-        <p class="copyrightText">Designed and Created by Jeffery Ma — <a class="projectLink copyrightText" href="https://github.com/FourWheelDrive/fourwheeldrive.github.io" target="_blank">GitHub</a></p>
+        <p class="copyrightText">© 2023 Jeffery Ma — <a class="projectLink copyrightText" href="https://github.com/FourWheelDrive/fourwheeldrive.github.io" target="_blank">GitHub</a></p>
     </div>
 </body>
 
