Quick fix for images in mobile

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <p class="projectDate">Jun 2022 — PRESENT</p>
                 </div>
                 <div class="projectContentWrapper">
-                    <div class="projectImageWrapper">
+                    <div class="projectImageWrapperMain">
                         <img id="inspectorSheet" class="projectImage" src="res\dreamweaver-home.png" alt="Where'd my spreadsheet go?">
                         <p class="projectImageCaption">A game built in vanilla JavaScript and my first experience with HTML5, CSS3, and JavaScript.
                             It is functional but not complete, and I will revisit it soon. <br>
@@ -117,7 +117,7 @@
                     <p class="projectDate">Oct 2020 — May 2022</p>
                 </div>
                 <div class="projectContentWrapper">
-                    <div class="projectImageWrapper">
+                    <div class="projectImageWrapperMain">
                         <img id="inspectorProfile" class="projectImage" src="res\inspector-profile.png" alt="I'd put the bot profile here, but I can't find it.">
                         <p class="projectImageCaption">Developed for the Entropy of Elsett using the Discord Client API and Google Sheets API as a Discord bot.
                             Provided administrative support and kept track of writing projects to help direct feedback.</p>
