--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="styles\pageTransitionStyle.css">
 
     <link rel="stylesheet" href="styles\0Style.css">
+    <link rel="stylesheet" href="styles\4Style.css">
 </head>
 
 <body onload="onload()">
@@ -44,7 +45,8 @@
                     I'm always looking for a challenge and the opportunity to improve my skills.
                     <br>
                     <br>
-                    <a href="https://drive.google.com/file/d/1AB7BmzkOrL-Jsw9RGWubsJ3Jwf87freS/view?usp=sharing" target="_blank">View my resume here!</a>
+                    <a href="https://drive.google.com/file/d/1AB7BmzkOrL-Jsw9RGWubsJ3Jwf87freS/view?usp=sharing"
+                        target="_blank">View my resume here!</a>
                 </p>
             </div>
 
@@ -61,15 +63,42 @@
                 </div>
             -->
 
+            <div id="pageBody__projects__4" class="projectPage">
+                <div class="projectTitleWrapper">
+                    <h2 class="projectTitle">AI Text Moderation Bot</h2>
+                    <p class="projectDate">Jan 2024</p>
+                </div>
+                <div class="projectContentWrapper">
+                    <div class="projectImageWrapperMain">
+                        <div id="project4ImageWrapper">
+                            <img id="modBotProfile" class="projectImage" src="res\altaML bot profile.png" alt="Bot profile failed to load.">
+                        </div>
+                        <p class="projectImageCaption"> Developed with a team of five students for HackED 2024's AltaML
+                            challenge, implemented with Discord.js,
+                            Google Fact Check Tools API, and OpenAI GPT API. <br>
+                            <br>
+                            I focused on improving the explainability of the outputs. We were limited by GPT's
+                            transparency, but I and a teammate created
+                            an algorithm to split up messages and return the smallest substrings flagged by GPT's
+                            Moderation API.<br>
+                            This allowed clearer identification of which sections were flagged and for which reason,
+                            providing some insight into the decision.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <!---->
             <div id="pageBody__projects__3" class="projectPage">
                 <div class="projectTitleWrapper">
                     <h2 class="projectTitle">fourwheeldrive.github.io</h2>
                     <p class="projectDate">Sep — Dec 2023</p>
                 </div>
                 <div class="projectContentWrapper">
-                    <p class="projectDescription">The portfolio website you are currently viewing! An exercise in front-end CSS 
+                    <p class="projectDescription">The portfolio website you are currently viewing! An exercise in
+                        front-end CSS
                         transitions and web typography. Built with vanilla HTML5, CSS3, and JavaScript!<br>
-                        I am working on responsive web design! Try changing your window size, and visiting this site on mobile or desktop!
+                        I am working on responsive web design! Try changing your window size, and visiting this site on
+                        mobile or desktop!
                     </p>
                     <p class="projectDescription" id="windowStats">--</p>
                 </div>
@@ -81,13 +110,16 @@
                     <p class="projectDate">Nov 2023</p>
                 </div>
                 <div class="projectContentWrapper">
-                    <p class="projectDescription">Developed with a team of four students for HackTheChange 2023, implemented
+                    <p class="projectDescription">Developed with a team of four students for HackTheChange 2023,
+                        implemented
                         with Express.js, Google Cloud Vision API, and OpenAI GPT API. <br> <br>
 
-                        I worked on fetching data from APIs by way of Node.js and returning the request to the DOM to be displayed. <br>
+                        I worked on fetching data from APIs by way of Node.js and returning the request to the DOM to be
+                        displayed. <br>
                         I also did a lot of research regarding how to apply the Cloud Vision and GPT APIs. <br>
 
-                        <a class="projectLink" href="https://devpost.com/software/waste-eye" target="_blank">Check out our project page!</a>
+                        <a class="projectLink" href="https://devpost.com/software/waste-eye" target="_blank">Check out
+                            our project page!</a>
                     </p>
                 </div>
             </div>
@@ -99,14 +131,18 @@
                 </div>
                 <div class="projectContentWrapper">
                     <div class="projectImageWrapperMain">
-                        <img id="inspectorSheet" class="projectImage" src="res\dreamweaver-home.png" alt="Where'd my spreadsheet go?">
-                        <p class="projectImageCaption">A game built in vanilla JavaScript and my first experience with HTML5, CSS3, and JavaScript.
+                        <img id="inspectorSheet" class="projectImage" src="res\dreamweaver-home.png"
+                            alt="Spreadsheet failed to load.">
+                        <p class="projectImageCaption">A game built in vanilla JavaScript and my first experience with
+                            HTML5, CSS3, and JavaScript.
                             It is functional but not complete, and I will revisit it soon. <br>
-    
+
                             Enemies and maps are procedurally generated, although a bit rudimentary. <br>
                             My first foray into HTML drag-and-drop API! <br>
-    
-                            <a class="projectLink" href="https://fourwheeldrive.github.io/dreamweaver/" target="_blank">Play Dreamweaver here!</a></p>
+
+                            <a class="projectLink" href="https://fourwheeldrive.github.io/dreamweaver/"
+                                target="_blank">Play Dreamweaver here!</a>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -118,13 +154,18 @@
                 </div>
                 <div class="projectContentWrapper">
                     <div class="projectImageWrapperMain">
-                        <img id="inspectorProfile" class="projectImage" src="res\inspector-profile.png" alt="I'd put the bot profile here, but I can't find it.">
-                        <p class="projectImageCaption">Developed for the Entropy of Elsett using the Discord Client API and Google Sheets API as a Discord bot.
-                            Provided administrative support and kept track of writing projects to help direct feedback.</p>
+                        <img id="inspectorProfile" class="projectImage" src="res\inspector-profile.png"
+                            alt="I'd put the bot profile here, but I can't find it.">
+                        <p class="projectImageCaption">Developed for the Entropy of Elsett using the Discord Client API
+                            and Google Sheets API as a Discord bot.
+                            Provided administrative support and kept track of writing projects to help direct feedback.
+                        </p>
                     </div>
                     <div class="projectImageWrapper">
-                        <img id="inspectorSheet" class="projectImage" src="res\inspector-spreadsheet.png" alt="Where'd my spreadsheet go?">
-                        <p class="projectImageCaption">Google Sheet update automatically through Discord commands, using the Google Sheets API.</p>
+                        <img id="inspectorSheet" class="projectImage" src="res\inspector-spreadsheet.png"
+                            alt="Where'd my spreadsheet go?">
+                        <p class="projectImageCaption">Google Sheet updated automatically through Discord commands,
+                            using the Google Sheets API.</p>
                     </div>
                 </div>
             </div>
@@ -137,8 +178,12 @@
     <!--small navigation for projects-->
     <!--on click, sends to some project page. **Needs a home button?-->
     <div id="pageBody__projectBar">
-        <h2 id="pageBody__projectBar__header">Projects</h2>
+        <div id="pageBody__projectBar__headerWrapper">
+            <h2 id="pageBody__projectBar__header">Projects</h2>
+            <p id="mobileScrollInstructions">Shift + Scroll ➤</p>
+        </div>
         <div id="pageBody__projectBar__wrapper">
+            <button id="pageBody__projectBar__4" class="project-menu-button">AltaML Bot</button>
             <button id="pageBody__projectBar__3" class="project-menu-button">fourwheeldrive.github.io</button>
             <button id="pageBody__projectBar__2" class="project-menu-button">Waste Eye</button>
             <button id="pageBody__projectBar__1" class="project-menu-button">Dreamweaver</button>
@@ -158,7 +203,8 @@
     </div>
 
     <div id="copyright">
-        <p class="copyrightText">© 2023 Jeffery Ma — <a class="projectLink copyrightText" href="https://github.com/FourWheelDrive/fourwheeldrive.github.io" target="_blank">GitHub</a></p>
+        <p class="copyrightText">© 2023 Jeffery Ma — <a class="projectLink copyrightText"
+                href="https://github.com/FourWheelDrive/fourwheeldrive.github.io" target="_blank">GitHub</a></p>
     </div>
 </body>
 
