test fix for mobile <p>

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h2 id="pageBody__about__title2">Jeffery Ma.</h2>
                 </div>
                 <p>I'm a second year BSc. Electrical Engineering Co-Op student at the University of Alberta.
-                    I love learning about system interactions, whether they're in aircraft or video games! <br>
+                    I love learning about system interactions, whether they're delivering power or moving video games! <br>
                     <br>
                     I'm always looking for a challenge and the opportunity to improve my skills.
                     <br>
