More polishing for images and about page cont

--- a/index.html
+++ b/index.html
@@ -40,9 +40,15 @@
                     <h2 id="pageBody__about__title2">Jeffery Ma.</h2>
                 </div>
                 <p>I'm a second year BSc. Electrical Engineering Co-Op student at the University of Alberta.
-                    I love learning about system interactions, whether they're delivering power or moving video games! <br>
+                    I am an avid programmer and violinist, and I love learning about the systems that drive our
+                    world—whether they're in substations or video games. <br>
                     <br>
-                    I'm always looking for a challenge and the opportunity to improve my skills.
+                    This website is a hub for my projects that I've been developing in vanilla JavaScript since
+                    September 2023.<br>
+                    I'm currently working on learning SQL for serverside work, as well as C, C++, and Assembly in my
+                    coursework.
+                    <br>
+                    I'm always looking to learn new skills and tackle creative challenges!
                     <br>
                     <br>
                     <a href="https://drive.google.com/file/d/1AB7BmzkOrL-Jsw9RGWubsJ3Jwf87freS/view?usp=sharing"
@@ -71,7 +77,8 @@
                 <div class="projectContentWrapper">
                     <div class="projectImageWrapperMain">
                         <div id="project4ImageWrapper">
-                            <img id="modBotProfile" class="projectImage" src="res\altaML bot profile.png" alt="Bot profile failed to load.">
+                            <img id="modBotProfile" class="projectImage" src="res\altaML bot profile.png"
+                                alt="Bot profile failed to load.">
                         </div>
                         <p class="projectImageCaption"> Developed with a team of five students for HackED 2024's AltaML
                             challenge, implemented with Discord.js,
@@ -131,8 +138,11 @@
                 </div>
                 <div class="projectContentWrapper">
                     <div class="projectImageWrapperMain">
-                        <img id="inspectorSheet" class="projectImage" src="res\dreamweaver-home.png"
-                            alt="Spreadsheet failed to load.">
+                        <div id="project1ImageWrapper">
+                            <img id="dreamweaverHome" class="projectImage" src="res\dreamweaver-home.png"
+                                alt="Image failed to load.">
+                        </div>
+
                         <p class="projectImageCaption">A game built in vanilla JavaScript and my first experience with
                             HTML5, CSS3, and JavaScript.
                             It is functional but not complete, and I will revisit it soon. <br>
@@ -141,35 +151,37 @@
                             My first foray into HTML drag-and-drop API! <br>
 
                             <a class="projectLink" href="https://fourwheeldrive.github.io/dreamweaver/"
-                                target="_blank">Play Dreamweaver here!</a>
+                                target="_blank">Play
+                                Dreamweaver here!</a>
                         </p>
-                    </div>
-                </div>
-            </div>
-            <!---->
-            <div id="pageBody__projects__0" class="projectPage">
-                <div class="projectTitleWrapper">
-                    <h2 class="projectTitle">1283 Inspector</h2>
-                    <p class="projectDate">Oct 2020 — May 2022</p>
-                </div>
-                <div class="projectContentWrapper">
-                    <div class="projectImageWrapperMain">
-                        <img id="inspectorProfile" class="projectImage" src="res\inspector-profile.png"
-                            alt="I'd put the bot profile here, but I can't find it.">
-                        <p class="projectImageCaption">Developed for the Entropy of Elsett using the Discord Client API
-                            and Google Sheets API as a Discord bot.
-                            Provided administrative support and kept track of writing projects to help direct feedback.
-                        </p>
-                    </div>
-                    <div class="projectImageWrapper">
-                        <img id="inspectorSheet" class="projectImage" src="res\inspector-spreadsheet.png"
-                            alt="Where'd my spreadsheet go?">
-                        <p class="projectImageCaption">Google Sheet updated automatically through Discord commands,
-                            using the Google Sheets API.</p>
                     </div>
                 </div>
             </div>
         </div>
+        <!---->
+        <div id="pageBody__projects__0" class="projectPage">
+            <div class="projectTitleWrapper">
+                <h2 class="projectTitle">1283 Inspector</h2>
+                <p class="projectDate">Oct 2020 — May 2022</p>
+            </div>
+            <div class="projectContentWrapper">
+                <div class="projectImageWrapperMain">
+                    <img id="inspectorProfile" class="projectImage" src="res\inspector-profile.png"
+                        alt="I'd put the bot profile here, but I can't find it.">
+                    <p class="projectImageCaption">Developed for the Entropy of Elsett using the Discord Client API
+                        and Google Sheets API as a Discord bot.
+                        Provided administrative support and kept track of writing projects to help direct feedback.
+                    </p>
+                </div>
+                <div class="projectImageWrapper">
+                    <img id="inspectorSheet" class="projectImage" src="res\inspector-spreadsheet.png"
+                        alt="Where'd my spreadsheet go?">
+                    <p class="projectImageCaption">Google Sheet updated automatically through Discord commands,
+                        using the Google Sheets API.</p>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 
     <!--Just a div for the transition between tabs.-->
@@ -184,7 +196,7 @@
         </div>
         <div id="pageBody__projectBar__wrapper">
             <button id="pageBody__projectBar__4" class="project-menu-button">AltaML Bot</button>
-            <button id="pageBody__projectBar__3" class="project-menu-button">fourwheeldrive.github.io</button>
+            <button id="pageBody__projectBar__3" class="project-menu-button">Portfolio</button>
             <button id="pageBody__projectBar__2" class="project-menu-button">Waste Eye</button>
             <button id="pageBody__projectBar__1" class="project-menu-button">Dreamweaver</button>
             <button id="pageBody__projectBar__0" class="project-menu-button">1283 Inspector</button>
